# agentic-rag

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/api/: api_standards_guide.md
docs/docker/: docker_baseline_analysis.md
docs/qdrant/: qdrant_deep_dive.md  qdrant_evaluation_report.md  qdrant_hybrid_search_setup.md  qdrant_metrics_guide.md
docs/team_notes/: api_design_principles.md  fastapi_architecture.md  logging_configurations.md  qdrant_db_notes.md
infra/api/: Dockerfile  docker-compose.yml
infra/frontend/: Dockerfile  docker-compose.yml
infra/qdrant-db/: docker-compose.yml
src/: main.py
src/api/routers/: documents.py
src/core/: config.py  exception_handlers.py  exceptions.py  logger.py  logging_config.json
src/docs/team_notes/: dockerization-principles.md  fastapi-architecture.md
src/schemas/: error.py  response.py
src/services/frontend/: app.py
src/storage/: qdrant_client.py
tests/: test_logging.py
