[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.7.1",
    "qdrant-client>=1.13.2",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
    "streamlit>=1.42.2",
    "watchdog>=6.0.0",
]
